--- a/css/styles.css
+++ b/css/styles.css
@@ -128,3 +128,16 @@ iframe{
         width: 100%;
     }
 }
+
+.grid{
+    display:grid;
+    gap:26px;
+    grid-template-columns:repeat(auto-fit, minmax(240px, 1fr));
+    grid-auto-rows: minmax(240px, auto);
+    margin-top: 6%;
+    margin-bottom: 50px;
+}
+
+.member{
+    text-align:center;
+}
