--- a/css/styles.css
+++ b/css/styles.css
@@ -141,3 +141,9 @@ iframe{
 .member{
     text-align:center;
 }
+
+.tweet-center{
+    display:flex;
+    justify-content: center;
+    margin: 40px 0;
+}
